fix: プロフィール画面の修正&作品画面の修正
全体のフォントを統一
プロフィールに生年月日と学校を追加
作品画面のレイアウトが崩れたのを修正

--- a/portfolio/src/style.css
+++ b/portfolio/src/style.css
@@ -3,9 +3,10 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Sawarabi+Gothic&display=swap');
 
-.main-font{
+html {
     font-family: 'Sawarabi Gothic', sans-serif;
 }
+
 .main span {
 display: inline-block;
 width: 6ch;
